fix: update translations

--- a/androidApp/src/main/res/values-ar/strings.xml
+++ b/androidApp/src/main/res/values-ar/strings.xml
@@ -1,16 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <!-- App Identity -->
     <string name="app_name">Mehr Guard</string>
     <string name="tagline">امسح رموز QR. اكتشف التصيد الاحتيالي.</string>
-
-    <!-- Navigation -->
     <string name="nav_home">الرئيسية</string>
     <string name="nav_scan">مسح</string>
     <string name="nav_history">السجل</string>
     <string name="nav_settings">الإعدادات</string>
-
-    <!-- Dashboard -->
     <string name="dashboard_welcome_back">مرحباً بعودتك</string>
     <string name="dashboard_default_user">مسؤول الأمان</string>
     <string name="dashboard_shield_active">الحماية نشطة</string>
@@ -30,8 +25,6 @@
     <string name="dashboard_db_status_default">قاعدة البيانات محدثة</string>
     <string name="dashboard_enterprise_protection">حماية المؤسسات</string>
     <string name="dashboard_url_placeholder">أدخل الرابط هنا…</string>
-
-    <!-- Scanner Screen -->
     <string name="start_scanning">بدء المسح</string>
     <string name="scan_from_gallery">مسح من المعرض</string>
     <string name="scan_instruction">قم بمحاذاة رمز QR في الإطار</string>
@@ -48,8 +41,6 @@
     <string name="analyze_url">تحليل الرابط</string>
     <string name="url_hint">مثال: https://example.com</string>
     <string name="url_placeholder">أدخل عنوان الرابط</string>
-
-    <!-- Results -->
     <string name="risk_score">درجة الخطر</string>
     <string name="scanned_url">الرابط الممسوح</string>
     <string name="copy">نسخ</string>
@@ -59,8 +50,6 @@
     <string name="safe_verdict">آمن</string>
     <string name="suspicious_verdict">مشبوه</string>
     <string name="malicious_verdict">خبيث</string>
-
-    <!-- Scan Result Screen -->
     <string name="scan_result_title">نتيجة المسح</string>
     <string name="verdict_malicious">تم اكتشاف خطر عالٍ</string>
     <string name="verdict_suspicious">نشاط مشبوه</string>
@@ -109,8 +98,6 @@
     <string name="tag_credential_harvesting">سرقة بيانات الاعتماد</string>
     <string name="tag_homograph_attack">هجوم الحروف المتشابهة</string>
     <string name="tag_new_domain">نطاق جديد</string>
-
-    <!-- Recommendations -->
     <string name="recommendation_safe">يبدو هذا الرابط آمناً. يمكنك المتابعة.</string>
     <string name="recommendation_suspicious">تعامل بحذر مع هذا الرابط. تحقق من المصدر.</string>
     <string name="recommendation_malicious">⛔ تحذير: يُظهر هذا الرابط علامات تصيد احتيالي. لا تُدخل أي معلومات شخصية.</string>
@@ -119,8 +106,6 @@
     <string name="remediation_1">لا تدخل بيانات الاعتماد في هذه الصفحة</string>
     <string name="remediation_2">احظر النطاق في جدار الحماية الخاص بمؤسستك</string>
     <string name="remediation_3">إذا تم إدخال بيانات الاعتماد، أعد تعيين كلمات المرور فوراً</string>
-
-    <!-- History Screen -->
     <string name="search_placeholder">البحث في الروابط…</string>
     <string name="clear_history_title">مسح السجل؟</string>
     <string name="clear_history_message">لا يمكن التراجع عن هذا الإجراء. سيتم حذف كل سجل المسح نهائياً.</string>
@@ -135,8 +120,6 @@
     <string name="no_results">لم يتم العثور على نتائج</string>
     <string name="try_different_filter">جرب فلتراً أو مصطلح بحث مختلفاً</string>
     <string name="history_go_to_scanner">الانتقال للماسح</string>
-
-    <!-- Settings Screen -->
     <string name="settings_scanning">المسح</string>
     <string name="settings_auto_scan">مسح تلقائي عند البدء</string>
     <string name="settings_auto_scan_desc">المسح فوراً عند فتح التطبيق</string>
@@ -176,6 +159,8 @@
     <string name="language_vietnamese">Tiếng Việt</string>
     <string name="language_indonesian">Bahasa Indonesia</string>
     <string name="language_thai">ภาษาไทย</string>
+    <string name="language_hebrew">עברית</string>
+    <string name="language_persian">فارسی</string>
     <string name="settings_privacy">الخصوصية</string>
     <string name="settings_save_history">حفظ سجل المسح</string>
     <string name="settings_save_history_desc">الاحتفاظ بسجل للروابط الممسوحة</string>
@@ -463,17 +448,12 @@
     <string name="privacy_type2">النوع II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
-
-    <!-- Feature Cards -->
     <string name="feature_offline_title">بنية تعمل بدون إنترنت أولاً</string>
     <string name="feature_offline_desc">يتم إجراء التحليل الكامل محليًا. كاميرتك والبيانات الممسوحة لا تلمس أبدًا خادمًا خارجيًا.</string>
     <string name="feature_explainable_title">أمان قابل للتفسير</string>
     <string name="feature_explainable_desc">ليس مجرد حظر. نقدم تحليلات استدلالية مفصلة لمعلمات URL وعمليات إعادة التوجيه.</string>
     <string name="feature_performance_title">محرك عالي الأداء</string>
     <string name="feature_performance_desc">محسّن لبيئات الهاتف المحمول. تتم معالجة عمليات المسح في أقل من 5 مللي ثانية باستخدام عناصر Kotlin الأصلية.</string>
-
-    
-    <!-- Blocklist Screen -->
     <string name="blocklist_offline_synced">Offline-first • Synced</string>
     <string name="blocklist_manage_desc">Manage domains forbidden by local policy.</string>
     <string name="blocklist_active_rules">ACTIVE RULES</string>
@@ -485,8 +465,6 @@
     <string name="blocklist_remove_protocol">Please remove "http://" or "https://" protocol.</string>
     <string name="blocklist_enter_root_domain">Enter the root domain (e.g., example.com). Subdomains will automatically be blocked by the AI engine.</string>
     <string name="blocklist_block_action">Block Domain</string>
-    
-    <!-- Allowlist Screen -->
     <string name="allowlist_header">Allowlist</string>
     <string name="allowlist_trusted_domains">Trusted Domains</string>
     <string name="allowlist_trusted_domains_desc">URLs from these domains will always be marked as safe. Use with caution.</string>
@@ -495,8 +473,6 @@
     <string name="allowlist_add_trusted">Add Trusted Domain</string>
     <string name="allowlist_warning">Allowlisted domains bypass all security checks. Only add domains you fully trust.</string>
     <string name="allowlist_add_action">Add to Allowlist</string>
-    
-    <!-- Export Report Screen -->
     <string name="export_report_title">Export Report</string>
     <string name="export_report_version">v2.4</string>
     <string name="export_risk_assessment">Risk Assessment</string>
@@ -506,8 +482,6 @@
     <string name="export_include_in_report">Include in Report</string>
     <string name="export_generated_locally">Generated locally • No data leaves your device</string>
     <string name="export_as_format">Export as %s</string>
-    
-    <!-- Offline Privacy Screen -->
     <string name="privacy_data_verification">Data Verification</string>
     <string name="privacy_image_data">IMAGE DATA</string>
     <string name="privacy_memory_only">Memory Only</string>
@@ -515,15 +489,11 @@
     <string name="privacy_local_cpu">Local CPU</string>
     <string name="privacy_user_history">USER HISTORY</string>
     <string name="privacy_encrypted_storage">Encrypted Storage (AES-256)</string>
-    
-    <!-- Threat Database Screen -->
     <string name="threat_database_title">Threat Intelligence</string>
     <string name="threat_database_verified">Database integrity verified &amp; up to date.</string>
     <string name="threat_database_update_methods">Update Methods</string>
     <string name="threat_database_sha256_verified">SHA-256 Verified</string>
     <string name="threat_database_integrity_desc">Database integrity verified via cryptographic checksum. Signed by Mehr Guard Security Ops.</string>
-    
-    <!-- Toast Messages -->
     <string name="toast_qr_found_analyzing">QR code found - analyzing…</string>
     <string name="toast_no_qr_found">No QR code found in image</string>
     <string name="toast_error_message">Error: %s</string>
@@ -546,7 +516,6 @@
     <string name="toast_complete_modules">Complete all modules to earn certificate</string>
     <string name="toast_tip_marked_read">Tip marked as read</string>
     <string name="toast_opening_module">Opening module: %s</string>
-    <!-- Additional Content Descriptions -->
     <string name="cd_verified">Verified</string>
     <string name="cd_add">Add</string>
     <string name="cd_remove">Remove</string>
@@ -560,11 +529,8 @@
     <string name="cd_available_offline">Available offline</string>
     <string name="cd_close">Close</string>
     <string name="cd_try_again">Try again</string>
-
-    <!-- Common -->
     <string name="enabled">enabled</string>
     <string name="disabled">disabled</string>
-    <!-- Scanner Screen Content Descriptions -->
     <string name="cd_processing_image">Processing image, please wait</string>
     <string name="cd_home_screen">QR Shield home screen. Tap Start Scanning to begin, or choose from gallery.</string>
     <string name="cd_app_logo_full">QR Shield logo</string>
@@ -578,32 +544,23 @@
     <string name="cd_resolving_url">Resolving shortened URL. Please wait.</string>
     <string name="cd_analyzing_url">Analyzing URL for security threats. Please wait.</string>
     <string name="cd_error_occurred">Error occurred: %s. Tap Try Again to retry.</string>
-    <!-- History Screen Content Descriptions -->
     <string name="cd_history_screen_items">Scan history screen with %d items</string>
     <string name="cd_search_history_url">Search scan history by URL</string>
     <string name="cd_filter_by">Filter by %s</string>
     <string name="cd_scan_result_details">Scan result: %1$s, verdict %2$s, score %3$d. Tap to view details.</string>
     <string name="cd_more_options_scan">More options for this scan</string>
-    <!-- ResultCard Content Descriptions -->
     <string name="cd_scan_result_full">Scan result: %1$s, risk score %2$d out of 100. URL: %3$s. %4$d risk factors found.</string>
     <string name="cd_scanned_url">Scanned URL: %s</string>
     <string name="cd_dismiss_result">Dismiss result and return home</string>
     <string name="cd_scan_another">Scan another QR code</string>
     <string name="cd_security">Security</string>
-    <!-- CameraPreview Content Descriptions -->
     <string name="cd_camera_preview">Camera preview for QR code scanning. Position a QR code in the center of the screen to scan it.</string>
-    <!-- SandboxWebView -->
-    <!-- Common placeholders -->
     <string name="placeholder_domain">example.com</string>
-    
-    <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">تحليل الذكاء الاصطناعي</string>
     <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
     <string name="beat_the_bot_reset_game">Reset Game</string>
     <string name="cd_reset_game">Reset game and start over</string>
     <string name="toast_game_reset">Game reset! Starting fresh…</string>
-    
-    <!-- Analysis Breakdown (ScanResultScreen) -->
     <string name="analysis_brand_title">انتحال العلامة التجارية</string>
     <string name="analysis_brand_desc">يبدو أن الرابط ينتحل علامة تجارية معروفة.</string>
     <string name="analysis_brand_desc_specific">يبدو أن الرابط ينتحل %1$s.</string>
@@ -637,8 +594,6 @@
     <string name="analysis_entropy_desc">يبدو أن النطاق تم إنشاؤه عشوائياً، وهو شائع في التصيد الاحتيالي.</string>
     <string name="analysis_port_title">منفذ غير عادي</string>
     <string name="analysis_port_desc">يستخدم الرابط رقم منفذ غير قياسي.</string>
-    
-    <!-- Tags (ScanResultScreen) -->
     <string name="tag_ip_address">عنوان IP</string>
     <string name="tag_brand_spoof">انتحال علامة تجارية</string>
     <string name="tag_insecure">غير آمن</string>
@@ -648,18 +603,12 @@
     <string name="tag_long_url">رابط طويل</string>
     <string name="tag_at_injection">حقن @</string>
     <string name="tag_verified_safe">تم التحقق كآمن</string>
-    
-    <!-- Status Badges (ScanResultScreen) -->
     <string name="status_scan_complete">اكتمل الفحص</string>
     <string name="status_caution_advised">يُنصح بالحذر</string>
     <string name="status_threat_detected">تم اكتشاف تهديد</string>
     <string name="status_analysis_complete">اكتمل التحليل</string>
-    
-    <!-- Meta Info (ScanResultScreen) -->
     <string name="meta_analyzed_offline">تم التحليل دون اتصال في أقل من 5 مللي ثانية</string>
     <string name="meta_no_data_leaves">لا تغادر البيانات الجهاز</string>
-    
-    <!-- Top Analysis Factors (ScanResultScreen) -->
     <string name="top_analysis_factors_title">أهم عوامل التحليل</string>
     <string name="factor_category_https">HTTPS</string>
     <string name="factor_category_domain">النطاق</string>
