--- a/iosApp/MehrGuard/fa.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/fa.lproj/Localizable.strings
@@ -338,3 +338,239 @@
 "nav.menu.scan_history_desc" = "اسکن‌های قبلی";
 "nav.menu.settings" = "تنظیمات";
 "nav.menu.settings_desc" = "ترجیحات";
+
+/* Additional Strings */
+"accessibility.back" = "Back";
+"accessibility.close_menu" = "Close menu";
+"accessibility.copy_url" = "Copy URL";
+"accessibility.dismiss" = "Dismiss";
+"accessibility.flash_off" = "Flash off";
+"accessibility.flash_on" = "Flash on";
+"accessibility.main_menu" = "Open main menu";
+"accessibility.scan_result" = "Scan result";
+"accessibility.settings" = "Settings";
+"accessibility.share" = "Share";
+"accessibility.trust_centre" = "Trust Centre";
+"accessibility.view_details" = "View details";
+"analysis.at_symbol.desc" = "This URL contains an @ symbol, which can be used to trick users into visiting a different site.";
+"analysis.at_symbol.title" = "@ Symbol Attack";
+"analysis.brand.desc" = "This URL appears to impersonate a known brand, attempting to deceive users.";
+"analysis.brand.desc_specific" = "This URL appears to impersonate %@, a known brand.";
+"analysis.brand.title" = "Brand Impersonation";
+"analysis.credential.desc" = "This URL contains patterns commonly used to steal login credentials.";
+"analysis.credential.title" = "Credential Harvesting";
+"analysis.entropy.desc" = "The domain appears to be randomly generated, which is common in malicious URLs.";
+"analysis.entropy.title" = "Random-Looking Domain";
+"analysis.homograph.desc" = "This URL uses characters that look similar to legitimate characters (IDN homograph attack) to deceive users.";
+"analysis.homograph.title" = "Homograph Attack";
+"analysis.ip_host.desc" = "This URL uses an IP address instead of a domain name, which is commonly used by attackers to evade detection.";
+"analysis.ip_host.title" = "IP Address Host";
+"analysis.login_keywords.desc" = "This URL contains keywords commonly used in phishing attacks to steal credentials.";
+"analysis.login_keywords.title" = "Login/Verify Keywords";
+"analysis.long_url.desc" = "This URL is unusually long, which may indicate an attempt to hide malicious content.";
+"analysis.long_url.title" = "Unusually Long URL";
+"analysis.no_issues" = "No significant issues detected. This URL appears to be safe.";
+"analysis.port.desc" = "This URL uses a non-standard port, which may indicate an attempt to bypass security filters.";
+"analysis.port.title" = "Non-Standard Port";
+"analysis.protocol.desc" = "This URL uses HTTP instead of HTTPS, meaning data is transmitted without encryption.";
+"analysis.protocol.title" = "Insecure Protocol";
+"analysis.redirect.desc" = "This URL uses a redirect or shortener service, which can hide the true destination.";
+"analysis.redirect.title" = "URL Shortener / Redirect";
+"analysis.risky_extension.desc" = "This URL points to a file type that may be dangerous to download or execute.";
+"analysis.risky_extension.title" = "Risky File Extension";
+"analysis.scheme.desc" = "This URL uses a potentially dangerous scheme (data: or javascript:) that can execute code.";
+"analysis.scheme.title" = "Dangerous Scheme";
+"analysis.subdomain.desc" = "This URL has excessive subdomains, which is often used to obscure the true domain.";
+"analysis.subdomain.title" = "Complex Domain Structure";
+"analysis.suspicious_path.desc" = "The URL path contains keywords commonly associated with phishing attempts.";
+"analysis.suspicious_path.title" = "Suspicious Path";
+"analysis.tld.desc" = "This URL uses a top-level domain that is commonly associated with malicious activity.";
+"analysis.tld.desc_specific" = "The TLD '%@' is frequently used for malicious purposes.";
+"analysis.tld.title" = "High-Risk TLD";
+"analysis.typosquatting.desc" = "This URL appears to be a misspelled version of a legitimate domain.";
+"analysis.typosquatting.title" = "Typosquatting";
+"analysis.urgency.desc" = "This URL contains urgent language designed to pressure users into acting quickly.";
+"analysis.urgency.title" = "Urgency Language";
+"analysis.verified_domain.desc" = "This URL belongs to a known, trusted domain.";
+"analysis.verified_domain.title" = "Verified Domain";
+"common.reset_all_settings" = "Reset All Settings";
+"common.settings" = "Settings";
+"component.active_state" = "Active State";
+"component.idle_state" = "Idle State";
+"dashboard.badge_plus" = "+2";
+"dashboard.hero.description_full" = "Mehr Guard analyses potential threats directly on your hardware. Experience";
+"dashboard.offline_badge" = "OFFLINE READY";
+"dashboard.privacy_note" = " without compromising data privacy.";
+"dashboard.version_date" = "Version 2023.10.24";
+"dashboard.zero_latency" = "zero-latency phishing detection";
+"detail.analysis_details" = "Analysis Details";
+"detail.copied" = "Copied!";
+"detail.copy_url" = "Copy URL";
+"detail.domain" = "Domain";
+"detail.no_risks" = "No risks detected";
+"detail.open_url" = "Open URL";
+"detail.open_warning" = "Opening this URL may be dangerous. Are you sure?";
+"detail.open_warning_title" = "Security Warning";
+"detail.proceed" = "Proceed Anyway";
+"detail.protocol" = "Protocol";
+"detail.protocol_http" = "HTTP (Not Secure)";
+"detail.protocol_https" = "HTTPS (Secure)";
+"detail.report_false_positive" = "Report False Positive";
+"detail.risk_factors" = "Risk Factors";
+"detail.scanned_at" = "Scanned at %@";
+"detail.scanned_at_time_ago" = "Scanned %@";
+"detail.score_breakdown" = "Score Breakdown";
+"detail.share_analysis" = "Share Analysis";
+"detail.url_details" = "URL Details";
+"detail.url_information" = "URL Information";
+"detail.url_label" = "URL";
+"error.analysis_failed" = "Analysis failed";
+"error.dismiss" = "Dismiss error";
+"error.generic" = "An error occurred";
+"error.image_scan_failed" = "Image scan failed: %@";
+"error.invalid_or_unsupported" = "Invalid or unsupported QR content.";
+"error.invalid_url" = "Invalid URL detected";
+"error.network" = "Network connection error";
+"error.no_qr_found" = "No QR code found in the selected image.";
+"export.action_copy_desc" = "Copy the report content to your clipboard for pasting into other apps.";
+"export.action_export_desc" = "Save the report directly to your device.";
+"export.action_share" = "Share";
+"export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
+"export.available_actions" = "AVAILABLE ACTIONS";
+"export.copied" = "Copied!";
+"export.copy" = "Copy";
+"export.expand" = "Expand";
+"export.format.json_subtitle" = "Machine-readable raw data";
+"export.format.json_title" = "JSON Data";
+"export.format.pdf_subtitle" = "Human-readable summary";
+"export.format.pdf_title" = "PDF Report";
+"export.help" = "Help";
+"export.help_title" = "Export Help";
+"export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
+"export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+"export.privacy_message" = "All analysis is performed entirely on your device. Exported reports do not contain any personal information beyond the URL you scanned.";
+"export.privacy_note" = "Privacy Note";
+"export.report_generation" = "Report Generation";
+"export.report_preview" = "Report Preview";
+"export.switch_to" = "Switch to %@";
+"format.latency" = "%dms";
+"format.percent" = "%d%%";
+"format.score_slash_100" = "%d/100";
+"format.status_date" = "%@ • %@";
+"history.exported_clipboard" = "Exported to clipboard";
+"history.last_audit_format" = "Last audit: %@";
+"history.malicious_count" = "Malicious: %d";
+"history.malicious_format" = "Malicious: %d";
+"history.safe_count" = "Safe: %d";
+"history.safe_format" = "Safe: %d";
+"history.scan_statistics" = "Scan Statistics";
+"history.suspicious_count" = "Suspicious: %d";
+"history.suspicious_format" = "Suspicious: %d";
+"history.total_format" = "Total: %d scans";
+"history.total_scans" = "Total: %d scans";
+"history.url_label" = "URL";
+"kmp.analysis_result" = "Analysis Result";
+"kmp.analyze_button" = "Analyze with KMP Engine";
+"kmp.brand" = "🛡️ Mehr Guard";
+"kmp.framework_linked" = "✅ KMP Framework Linked";
+"kmp.integration" = "Kotlin Multiplatform Integration";
+"kmp.powered_by" = "Powered by Kotlin/Native";
+"kmp.quick_test" = "Quick Test:";
+"kmp.risk_flags" = "Risk Flags:";
+"kmp.score_format" = "Score: %d/100";
+"kmp.using_mock" = "⚠️ Using Mock (link common.framework)";
+"meta.analysis_time" = "Analysis Time";
+"meta.engine" = "Engine";
+"meta.engine_version_fmt" = "v%@";
+"meta.heuristics" = "Heuristics";
+"nav.menu.beat_the_bot" = "Beat the Bot";
+"nav.menu.beat_the_bot_desc" = "Training game";
+"nav.menu.export_report" = "Export Report";
+"nav.menu.export_report_desc" = "Generate report";
+"nav.menu.threat_monitor" = "Threat Monitor";
+"nav.menu.threat_monitor_desc" = "Live threats";
+"nav.menu.trust_centre" = "Trust Centre";
+"nav.menu.trust_centre_desc" = "Privacy & security";
+"nav.quick.import" = "Import";
+"nav.quick.paste_url" = "Paste URL";
+"nav.quick.scan" = "Scan";
+"nav.quick_actions" = "QUICK ACTIONS";
+"nav.systems_operational" = "All systems operational";
+"nav.version_offline" = "v2.4.0 • Offline Mode";
+"onboarding.camera_allow" = "Allow Camera";
+"onboarding.camera_later" = "Maybe Later";
+"onboarding.camera_permission_message" = "Mehr Guard needs camera access to scan QR codes. You can change this later in Settings.";
+"onboarding.camera_title" = "Camera Permission";
+"onboarding.page_counter" = "%d/%d";
+"onboarding.page_of" = "Page %d of %d";
+"result.block_description" = "This will block the domain and report it to your security team.";
+"result.dangerous_warning" = "This URL has been flagged as potentially dangerous. Opening it may expose you to phishing, malware, or other security threats.\n\nAre you sure you want to proceed?";
+"result.open_safari" = "Open in Safari (Risky)";
+"result.open_warning_full" = "Opening this URL in your browser may expose you to security risks.";
+"scanner.analyzing_dots" = "Analyzing...";
+"scanner.brand" = "Mehr Guard";
+"scanner.camera_preview" = "Camera Preview";
+"scanner.camera_required_message" = "Mehr Guard needs camera access to scan QR codes. Please enable it in Settings.";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
+"scanner.camera_required_title" = "Camera Access Required";
+"scanner.copy_url" = "Copy URL";
+"scanner.dismiss" = "Dismiss";
+"scanner.dismiss_error" = "Dismiss error";
+"scanner.flash_off" = "Flash off";
+"scanner.flash_on" = "Flash on";
+"scanner.open_history" = "Open history";
+"scanner.point_qr" = "Point at QR Code";
+"scanner.scan_toggle" = "Toggle scanning";
+"scanner.share" = "Share";
+"scanner.status_paused" = "Paused";
+"scanner.status_scanning" = "Scanning";
+"scanner.toggle_scan" = "Toggle scanning";
+"scanner.view_details" = "View Details";
+"settings.clear_confirm_message" = "This action cannot be undone. All scan history will be permanently deleted.";
+"settings.clear_history_button" = "Clear History";
+"settings.close_app" = "Close App";
+"settings.engine_swift" = "Swift 6";
+"settings.export_report" = "Export Report";
+"settings.export_report_desc" = "Generate PDF or JSON security report";
+"settings.ios_version" = "iOS 17+";
+"settings.language_changed" = "Language Changed";
+"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
+"settings.liquid_glass_footer" = "iOS 17+ introduces beautiful Liquid Glass effects. Reduce effects if you experience performance issues.";
+"settings.privacy_policy_link" = "Privacy Policy";
+"settings.quick_actions" = "Quick Actions";
+"settings.red_team_warning" = "Red Team Mode bypasses camera and injects test URLs directly into the detection engine.";
+"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
+"settings.restart_error_title" = "Restart Error";
+"settings.restart_later" = "Later";
+"settings.restart_now" = "Restart Now";
+"settings.restart_step1" = "Tap 'Close App' below";
+"settings.restart_step2" = "Swipe up from the app switcher to fully close";
+"settings.restart_step3" = "Reopen Mehr Guard to see the new language";
+"settings.restart_subtitle" = "To display Mehr Guard in %@, please restart the app.";
+"settings.restart_title" = "Restart Required";
+"settings.security_alerts_desc" = "Get notified about security threats";
+"settings.security_alerts_title" = "Security alerts";
+"settings.source_code_link" = "Source Code";
+"settings.system_appearance_label" = "System Appearance";
+"settings.threat_monitor" = "Threat Monitor";
+"settings.threat_monitor_desc" = "View live threats and run security audit";
+"settings.trust_centre" = "Trust Centre";
+"settings.trust_centre_desc" = "Privacy settings and threat sensitivity";
+"threat.global_view" = "Global View";
+"threat.last_audit" = "Last audit: %@";
+"threat.latest_updates" = "LATEST UPDATES";
+"threat.live" = "LIVE";
+"threat.live_map" = "LIVE THREAT MAP";
+"threat.no_vulnerabilities" = "No vulnerabilities detected. Your device is secure.";
+"training.live_hint" = "Live Hint";
+"training.reset" = "Reset Game";
+"training.tip" = "Tip:";
+"training.unusual_signin" = "Unusual Sign-in Attempt";
+"training.unusual_signin_message" = "We detected a login from a new device. Please verify your identity immediately to prevent account suspension.";
+"training.verify_identity" = "Verify Identity";
+"trust.balanced" = "Balanced";
+"trust.low" = "Low";
+"trust.paranoia" = "Paranoia";
+"trust.reset_confirm" = "This will reset all Trust Centre settings to their defaults.";
+"trust.reset_defaults" = "Reset to Defaults";
+"trust.version_info" = "Mehr Guard v2.4.0 (Build 892)";
