--- a/androidApp/src/main/res/values-ru/strings.xml
+++ b/androidApp/src/main/res/values-ru/strings.xml
@@ -1,16 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <!-- App Identity -->
     <string name="app_name">Mehr Guard</string>
     <string name="tagline">Сканируйте QR-коды. Обнаруживайте фишинг.</string>
-
-    <!-- Navigation -->
     <string name="nav_home">Главная</string>
     <string name="nav_scan">Сканировать</string>
     <string name="nav_history">История</string>
     <string name="nav_settings">Настройки</string>
-
-    <!-- Dashboard -->
     <string name="dashboard_welcome_back">С возвращением</string>
     <string name="dashboard_default_user">Администратор безопасности</string>
     <string name="dashboard_shield_active">ЗАЩИТА АКТИВНА</string>
@@ -30,8 +25,6 @@
     <string name="dashboard_db_status_default">База данных обновлена</string>
     <string name="dashboard_enterprise_protection">Корпоративная защита</string>
     <string name="dashboard_url_placeholder">Введите URL здесь…</string>
-
-    <!-- Scanner Screen -->
     <string name="start_scanning">Начать сканирование</string>
     <string name="scan_from_gallery">Сканировать из галереи</string>
     <string name="scan_instruction">Выровняйте QR-код в рамке</string>
@@ -48,8 +41,6 @@
     <string name="analyze_url">Анализировать URL</string>
     <string name="url_hint">напр. https://example.com</string>
     <string name="url_placeholder">Введите адрес URL</string>
-
-    <!-- Results -->
     <string name="risk_score">Оценка риска</string>
     <string name="scanned_url">Отсканированный URL</string>
     <string name="copy">Копировать</string>
@@ -59,8 +50,6 @@
     <string name="safe_verdict">БЕЗОПАСНО</string>
     <string name="suspicious_verdict">ПОДОЗРИТЕЛЬНО</string>
     <string name="malicious_verdict">ВРЕДОНОСНО</string>
-
-    <!-- Scan Result Screen -->
     <string name="scan_result_title">Результат сканирования</string>
     <string name="verdict_malicious">Обнаружен высокий риск</string>
     <string name="verdict_suspicious">Подозрительная активность</string>
@@ -109,8 +98,6 @@
     <string name="tag_credential_harvesting">Кража учётных данных</string>
     <string name="tag_homograph_attack">Омографическая атака</string>
     <string name="tag_new_domain">Новый домен</string>
-
-    <!-- Recommendations -->
     <string name="recommendation_safe">Этот URL кажется безопасным. Можете продолжить.</string>
     <string name="recommendation_suspicious">Будьте осторожны с этим URL. Проверьте источник.</string>
     <string name="recommendation_malicious">⛔ ВНИМАНИЕ: Этот URL показывает признаки фишинга. НЕ вводите личную информацию.</string>
@@ -119,8 +106,6 @@
     <string name="remediation_1">Не вводите учётные данные на этой странице</string>
     <string name="remediation_2">Заблокируйте домен в корпоративном брандмауэре</string>
     <string name="remediation_3">Если учётные данные были введены, немедленно сбросьте пароли</string>
-
-    <!-- History Screen -->
     <string name="search_placeholder">Поиск URL…</string>
     <string name="clear_history_title">Очистить историю?</string>
     <string name="clear_history_message">Это действие нельзя отменить. Вся история сканирований будет удалена навсегда.</string>
@@ -135,8 +120,6 @@
     <string name="no_results">Результаты не найдены</string>
     <string name="try_different_filter">Попробуйте другой фильтр или поисковый запрос</string>
     <string name="history_go_to_scanner">Перейти к сканеру</string>
-
-    <!-- Settings Screen -->
     <string name="settings_scanning">Сканирование</string>
     <string name="settings_auto_scan">Автосканирование при запуске</string>
     <string name="settings_auto_scan_desc">Сканировать сразу при открытии приложения</string>
@@ -176,6 +159,8 @@
     <string name="language_vietnamese">Tiếng Việt</string>
     <string name="language_indonesian">Bahasa Indonesia</string>
     <string name="language_thai">ภาษาไทย</string>
+    <string name="language_hebrew">עברית</string>
+    <string name="language_persian">فارسی</string>
     <string name="settings_privacy">Конфиденциальность</string>
     <string name="settings_save_history">Сохранять историю сканирований</string>
     <string name="settings_save_history_desc">Вести журнал отсканированных URL</string>
@@ -463,17 +448,12 @@
     <string name="privacy_type2">Тип II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
-
-    <!-- Feature Cards -->
     <string name="feature_offline_title">Архитектура Offline-First</string>
     <string name="feature_offline_desc">Полный анализ выполняется локально. Ваша камера и отсканированные данные никогда не касаются внешнего сервера.</string>
     <string name="feature_explainable_title">Объяснимая Безопасность</string>
     <string name="feature_explainable_desc">Не просто Заблокировать. Мы предоставляем детальный эвристический анализ параметров URL и редиректов.</string>
     <string name="feature_performance_title">Высокопроизводительный Движок</string>
     <string name="feature_performance_desc">Оптимизирован для мобильных сред. Сканирование выполняется менее чем за 5мс с использованием нативных примитивов Kotlin.</string>
-
-    
-    <!-- Blocklist Screen -->
     <string name="blocklist_offline_synced">Offline-first • Synced</string>
     <string name="blocklist_manage_desc">Manage domains forbidden by local policy.</string>
     <string name="blocklist_active_rules">ACTIVE RULES</string>
@@ -485,8 +465,6 @@
     <string name="blocklist_remove_protocol">Please remove "http://" or "https://" protocol.</string>
     <string name="blocklist_enter_root_domain">Enter the root domain (e.g., example.com). Subdomains will automatically be blocked by the AI engine.</string>
     <string name="blocklist_block_action">Block Domain</string>
-    
-    <!-- Allowlist Screen -->
     <string name="allowlist_header">Allowlist</string>
     <string name="allowlist_trusted_domains">Trusted Domains</string>
     <string name="allowlist_trusted_domains_desc">URLs from these domains will always be marked as safe. Use with caution.</string>
@@ -495,8 +473,6 @@
     <string name="allowlist_add_trusted">Add Trusted Domain</string>
     <string name="allowlist_warning">Allowlisted domains bypass all security checks. Only add domains you fully trust.</string>
     <string name="allowlist_add_action">Add to Allowlist</string>
-    
-    <!-- Export Report Screen -->
     <string name="export_report_title">Export Report</string>
     <string name="export_report_version">v2.4</string>
     <string name="export_risk_assessment">Risk Assessment</string>
@@ -506,8 +482,6 @@
     <string name="export_include_in_report">Include in Report</string>
     <string name="export_generated_locally">Generated locally • No data leaves your device</string>
     <string name="export_as_format">Export as %s</string>
-    
-    <!-- Offline Privacy Screen -->
     <string name="privacy_data_verification">Data Verification</string>
     <string name="privacy_image_data">IMAGE DATA</string>
     <string name="privacy_memory_only">Memory Only</string>
@@ -515,15 +489,11 @@
     <string name="privacy_local_cpu">Local CPU</string>
     <string name="privacy_user_history">USER HISTORY</string>
     <string name="privacy_encrypted_storage">Encrypted Storage (AES-256)</string>
-    
-    <!-- Threat Database Screen -->
     <string name="threat_database_title">Threat Intelligence</string>
     <string name="threat_database_verified">Database integrity verified &amp; up to date.</string>
     <string name="threat_database_update_methods">Update Methods</string>
     <string name="threat_database_sha256_verified">SHA-256 Verified</string>
     <string name="threat_database_integrity_desc">Database integrity verified via cryptographic checksum. Signed by Mehr Guard Security Ops.</string>
-    
-    <!-- Toast Messages -->
     <string name="toast_qr_found_analyzing">QR code found - analyzing…</string>
     <string name="toast_no_qr_found">No QR code found in image</string>
     <string name="toast_error_message">Error: %s</string>
@@ -546,7 +516,6 @@
     <string name="toast_complete_modules">Complete all modules to earn certificate</string>
     <string name="toast_tip_marked_read">Tip marked as read</string>
     <string name="toast_opening_module">Opening module: %s</string>
-    <!-- Additional Content Descriptions -->
     <string name="cd_verified">Verified</string>
     <string name="cd_add">Add</string>
     <string name="cd_remove">Remove</string>
@@ -560,11 +529,8 @@
     <string name="cd_available_offline">Available offline</string>
     <string name="cd_close">Close</string>
     <string name="cd_try_again">Try again</string>
-
-    <!-- Common -->
     <string name="enabled">enabled</string>
     <string name="disabled">disabled</string>
-    <!-- Scanner Screen Content Descriptions -->
     <string name="cd_processing_image">Processing image, please wait</string>
     <string name="cd_home_screen">QR Shield home screen. Tap Start Scanning to begin, or choose from gallery.</string>
     <string name="cd_app_logo_full">QR Shield logo</string>
@@ -578,32 +544,23 @@
     <string name="cd_resolving_url">Resolving shortened URL. Please wait.</string>
     <string name="cd_analyzing_url">Analyzing URL for security threats. Please wait.</string>
     <string name="cd_error_occurred">Error occurred: %s. Tap Try Again to retry.</string>
-    <!-- History Screen Content Descriptions -->
     <string name="cd_history_screen_items">Scan history screen with %d items</string>
     <string name="cd_search_history_url">Search scan history by URL</string>
     <string name="cd_filter_by">Filter by %s</string>
     <string name="cd_scan_result_details">Scan result: %1$s, verdict %2$s, score %3$d. Tap to view details.</string>
     <string name="cd_more_options_scan">More options for this scan</string>
-    <!-- ResultCard Content Descriptions -->
     <string name="cd_scan_result_full">Scan result: %1$s, risk score %2$d out of 100. URL: %3$s. %4$d risk factors found.</string>
     <string name="cd_scanned_url">Scanned URL: %s</string>
     <string name="cd_dismiss_result">Dismiss result and return home</string>
     <string name="cd_scan_another">Scan another QR code</string>
     <string name="cd_security">Security</string>
-    <!-- CameraPreview Content Descriptions -->
     <string name="cd_camera_preview">Camera preview for QR code scanning. Position a QR code in the center of the screen to scan it.</string>
-    <!-- SandboxWebView -->
-    <!-- Common placeholders -->
     <string name="placeholder_domain">example.com</string>
-    
-    <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">ИИ АНАЛИЗ</string>
     <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
     <string name="beat_the_bot_reset_game">Reset Game</string>
     <string name="cd_reset_game">Reset game and start over</string>
     <string name="toast_game_reset">Game reset! Starting fresh…</string>
-    
-    <!-- Analysis Breakdown (ScanResultScreen) -->
     <string name="analysis_brand_title">Подмена Бренда</string>
     <string name="analysis_brand_desc">URL-адрес похоже имитирует известный бренд.</string>
     <string name="analysis_brand_desc_specific">URL-адрес похоже имитирует %1$s.</string>
@@ -637,8 +594,6 @@
     <string name="analysis_entropy_desc">Домен выглядит случайно сгенерированным, что типично для фишинга.</string>
     <string name="analysis_port_title">Необычный Порт</string>
     <string name="analysis_port_desc">URL использует нестандартный номер порта.</string>
-    
-    <!-- Tags (ScanResultScreen) -->
     <string name="tag_ip_address">IP-адрес</string>
     <string name="tag_brand_spoof">Подмена Бренда</string>
     <string name="tag_insecure">Небезопасный</string>
@@ -648,18 +603,12 @@
     <string name="tag_long_url">Длинный URL</string>
     <string name="tag_at_injection">Инъекция @</string>
     <string name="tag_verified_safe">Подтверждён Безопасным</string>
-    
-    <!-- Status Badges (ScanResultScreen) -->
     <string name="status_scan_complete">Сканирование Завершено</string>
     <string name="status_caution_advised">Рекомендуется Осторожность</string>
     <string name="status_threat_detected">Угроза Обнаружена</string>
     <string name="status_analysis_complete">Анализ Завершён</string>
-    
-    <!-- Meta Info (ScanResultScreen) -->
     <string name="meta_analyzed_offline">Проанализировано офлайн за &lt;5мс</string>
     <string name="meta_no_data_leaves">Данные не покидают устройство</string>
-    
-    <!-- Top Analysis Factors (ScanResultScreen) -->
     <string name="top_analysis_factors_title">Основные Факторы Анализа</string>
     <string name="factor_category_https">HTTPS</string>
     <string name="factor_category_domain">ДОМЕН</string>
