--- a/iosApp/MehrGuard/de.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/de.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "app.tagline" = "Kotlin Multiplatform QRishing-Detektor";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Start";
+"tab.dashboard" = "Dashboard";
 "tab.scan" = "Scannen";
 "tab.history" = "Verlauf";
 "tab.training" = "Training";
@@ -128,18 +128,18 @@
 // MARK: - Onboarding
 "onboarding.skip" = "Überspringen";
 "onboarding.continue" = "Weiter";
-"onboarding.get_started" = "Loslegen";
+"onboarding.get_started" = "Los geht's";
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
 "onboarding.scan.title" = "Jeden QR-Code scannen";
-"onboarding.scan.description" = "Richten Sie Ihre Kamera auf einen beliebigen QR-Code, um dessen Inhalt sofort auf potenzielle Bedrohungen zu analysieren.";
-"onboarding.protect.title" = "Echtzeitschutz";
-"onboarding.protect.description" = "Unsere KI-gestützte Engine analysiert URLs mit über 25 Sicherheitsheuristiken und Machine-Learning-Algorithmen.";
+"onboarding.scan.description" = "Richten Sie Ihre Kamera auf einen QR-Code, um seinen Inhalt sofort auf potenzielle Bedrohungen zu analysieren.";
+"onboarding.protect.title" = "Echtzeit-Schutz";
+"onboarding.protect.description" = "Unsere KI-Engine analysiert URLs mit über 25 Sicherheitsheuristiken und Machine-Learning-Algorithmen.";
 "onboarding.privacy.title" = "Datenschutz zuerst";
-"onboarding.privacy.description" = "Alle Analysen erfolgen auf dem Gerät mit Kotlin Multiplatform. Ihre Daten verlassen niemals Ihr Telefon.";
+"onboarding.privacy.description" = "Alle Analysen erfolgen auf dem Gerät mit Kotlin Multiplatform. Ihre Daten verlassen nie Ihr Telefon.";
 "onboarding.design.title" = "Schönes iOS 17+ Design";
-"onboarding.design.description" = "Erleben Sie die atemberaubende Liquid Glass-Oberfläche mit flüssigen Animationen und moderner Ästhetik.";
+"onboarding.design.description" = "Erleben Sie die atemberaubende Liquid Glass-Oberfläche mit fließenden Animationen und moderner Ästhetik.";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "Kameraberechtigung";
@@ -658,3 +658,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
