--- a/iosApp/MehrGuard/es.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/es.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "app.tagline" = "Detector de QRishing Kotlin Multiplatform";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Inicio";
+"tab.dashboard" = "Panel";
 "tab.scan" = "Escanear";
 "tab.history" = "Historial";
 "tab.training" = "Entrenamiento";
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Alertas de seguridad";
 "settings.security_alerts_description" = "Recibir notificaciones sobre amenazas de seguridad";
 "settings.notifications_denied_title" = "Notificaciones deshabilitadas";
-"settings.notifications_denied_message" = "Para recibir alertas de seguridad, por favor habilite las notificaciones para Mehr Guard en Ajustes.";
+"settings.notifications_denied_message" = "Para recibir alertas, habilita las notificaciones para Mehr Guard en Ajustes.";
 "settings.open_settings" = "Abrir Ajustes";
 "settings.cancel" = "Cancelar";
 
@@ -133,9 +133,9 @@
 
 // Onboarding Pages
 "onboarding.scan.title" = "Escanea cualquier código QR";
-"onboarding.scan.description" = "Apunta tu cámara a cualquier código QR para analizar instantáneamente su contenido en busca de amenazas potenciales.";
+"onboarding.scan.description" = "Apunta tu cámara a cualquier código QR para analizar instantáneamente su contenido en busca de amenazas.";
 "onboarding.protect.title" = "Protección en tiempo real";
-"onboarding.protect.description" = "Nuestro motor impulsado por IA analiza URLs usando más de 25 heurísticas de seguridad y algoritmos de aprendizaje automático.";
+"onboarding.protect.description" = "Nuestro motor IA analiza URLs usando más de 25 heurísticas de seguridad y algoritmos de aprendizaje automático.";
 "onboarding.privacy.title" = "Privacidad primero";
 "onboarding.privacy.description" = "Todo el análisis ocurre en el dispositivo usando Kotlin Multiplatform. Tus datos nunca salen de tu teléfono.";
 "onboarding.design.title" = "Hermoso diseño iOS 17+";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
