--- a/iosApp/MehrGuard/fr.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/fr.lproj/Localizable.strings
@@ -11,11 +11,11 @@
 "app.tagline" = "Détecteur de QRishing Kotlin Multiplatform";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Accueil";
+"tab.dashboard" = "Tableau de bord";
 "tab.scan" = "Scanner";
 "tab.history" = "Historique";
-"tab.training" = "Formation";
-"tab.settings" = "Réglages";
+"tab.training" = "Entraînement";
+"tab.settings" = "Paramètres";
 
 // MARK: - Scanner View
 "scanner.title" = "Mehr Guard";
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Alertes de sécurité";
 "settings.security_alerts_description" = "Recevoir des notifications sur les menaces de sécurité";
 "settings.notifications_denied_title" = "Notifications désactivées";
-"settings.notifications_denied_message" = "Pour recevoir les alertes de sécurité, veuillez activer les notifications pour Mehr Guard dans les Réglages.";
+"settings.notifications_denied_message" = "Pour recevoir les alertes, activez les notifications pour Mehr Guard dans Réglages.";
 "settings.open_settings" = "Ouvrir Réglages";
 "settings.cancel" = "Annuler";
 
@@ -126,20 +126,20 @@
 "settings.engine" = "Moteur";
 
 // MARK: - Onboarding
-"onboarding.skip" = "Passer";
+"onboarding.skip" = "Ignorer";
 "onboarding.continue" = "Continuer";
 "onboarding.get_started" = "Commencer";
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
 "onboarding.scan.title" = "Scannez n'importe quel code QR";
-"onboarding.scan.description" = "Pointez votre caméra vers n'importe quel code QR pour analyser instantanément son contenu à la recherche de menaces.";
+"onboarding.scan.description" = "Pointez votre caméra vers un code QR pour analyser instantanément son contenu à la recherche de menaces.";
 "onboarding.protect.title" = "Protection en temps réel";
-"onboarding.protect.description" = "Notre moteur alimenté par l'IA analyse les URLs avec plus de 25 heuristiques de sécurité et algorithmes d'apprentissage machine.";
+"onboarding.protect.description" = "Notre moteur IA analyse les URLs avec plus de 25 heuristiques de sécurité et algorithmes d'apprentissage automatique.";
 "onboarding.privacy.title" = "Confidentialité d'abord";
-"onboarding.privacy.description" = "Toute l'analyse se fait sur l'appareil avec Kotlin Multiplatform. Vos données ne quittent jamais votre téléphone.";
-"onboarding.design.title" = "Beau design iOS 17+";
-"onboarding.design.description" = "Découvrez la superbe interface Liquid Glass avec des animations fluides et une esthétique moderne.";
+"onboarding.privacy.description" = "Toutes les analyses sont effectuées sur l'appareil avec Kotlin Multiplatform. Vos données ne quittent jamais votre téléphone.";
+"onboarding.design.title" = "Magnifique design iOS 17+";
+"onboarding.design.description" = "Découvrez l'interface Liquid Glass époustouflante avec des animations fluides et une esthétique moderne.";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "Permission caméra";
@@ -269,7 +269,7 @@
 "settings.language_system" = "Par défaut du système";
 "settings.language_search" = "Rechercher des langues";
 "settings.language_footer" = "Sélectionnez votre langue préférée. L'application utilisera la langue sélectionnée pour tout le texte et le contenu.";
-"common.done" = "Terminé";
+"common.done" = "OK";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Redémarrage requis";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
