--- a/iosApp/MehrGuard/hi.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/hi.lproj/Localizable.strings
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "सुरक्षा अलर्ट";
 "settings.security_alerts_description" = "सुरक्षा खतरों की सूचनाएं प्राप्त करें";
 "settings.notifications_denied_title" = "सूचनाएं अक्षम";
-"settings.notifications_denied_message" = "सुरक्षा अलर्ट प्राप्त करने के लिए, कृपया सेटिंग्स में Mehr Guard के लिए सूचनाएं सक्षम करें।";
+"settings.notifications_denied_message" = "अलर्ट प्राप्त करने के लिए, सेटिंग्स में Mehr Guard के लिए सूचनाएं सक्षम करें।";
 "settings.open_settings" = "सेटिंग्स खोलें";
 "settings.cancel" = "रद्द करें";
 
@@ -133,13 +133,13 @@
 
 // Onboarding Pages
 "onboarding.scan.title" = "कोई भी QR कोड स्कैन करें";
-"onboarding.scan.description" = "किसी भी QR कोड पर अपना कैमरा करें और संभावित खतरों के लिए तुरंत उसकी सामग्री का विश्लेषण करें।";
+"onboarding.scan.description" = "संभावित खतरों के लिए तुरंत विश्लेषण करने के लिए अपने कैमरे को किसी भी QR कोड पर पॉइंट करें।";
 "onboarding.protect.title" = "रियल-टाइम सुरक्षा";
-"onboarding.protect.description" = "हमारा AI-संचालित इंजन 25+ सुरक्षा ह्युरिस्टिक्स और मशीन लर्निंग एल्गोरिदम का उपयोग करके URLs का विश्लेषण करता है।";
-"onboarding.privacy.title" = "गोपनीयता पहले";
-"onboarding.privacy.description" = "सभी विश्लेषण Kotlin मल्टीप्लेटफ़ॉर्म का उपयोग करके डिवाइस पर होता है। आपका डेटा कभी आपके फोन से बाहर नहीं जाता।";
-"onboarding.design.title" = "सुंदर iOS 17+ डिज़ाइन";
-"onboarding.design.description" = "चिकने एनिमेशन और आधुनिक सौंदर्यशास्त्र के साथ शानदार Liquid Glass इंटरफ़ेस का अनुभव करें।";
+"onboarding.protect.description" = "हमारा AI इंजन 25+ सुरक्षा हेयुरिस्टिक्स और मशीन लर्निंग एल्गोरिदम का उपयोग करके URL का विश्लेषण करता है।";
+"onboarding.privacy.title" = "प्राइवेसी पहले";
+"onboarding.privacy.description" = "सभी विश्लेषण Kotlin Multiplatform का उपयोग करके डिवाइस पर होते हैं। आपका डेटा कभी आपके फोन से बाहर नहीं जाता।";
+"onboarding.design.title" = "खूबसूरत iOS 17+ डिज़ाइन";
+"onboarding.design.description" = "स्मूथ एनिमेशन और मॉडर्न एस्थेटिक्स के साथ शानदार Liquid Glass इंटरफ़ेस का अनुभव करें।";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "कैमरा अनुमति";
@@ -269,7 +269,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "हो गया";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "पुनः आरंभ आवश्यक";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
