--- a/iosApp/MehrGuard/id.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/id.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "tab.dashboard" = "Dasbor";
 "tab.scan" = "Pindai";
 "tab.history" = "Riwayat";
-"tab.training" = "Pelatihan";
+"tab.training" = "Latihan";
 "tab.settings" = "Pengaturan";
 
 // MARK: - Scanner View
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Peringatan keamanan";
 "settings.security_alerts_description" = "Dapatkan notifikasi tentang ancaman keamanan";
 "settings.notifications_denied_title" = "Notifikasi Dinonaktifkan";
-"settings.notifications_denied_message" = "Untuk menerima peringatan keamanan, silakan aktifkan notifikasi untuk Mehr Guard di Pengaturan.";
+"settings.notifications_denied_message" = "Untuk menerima peringatan, aktifkan notifikasi untuk Mehr Guard di Pengaturan.";
 "settings.open_settings" = "Buka Pengaturan";
 "settings.cancel" = "Batal";
 
@@ -132,14 +132,14 @@
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
-"onboarding.scan.title" = "Pindai Kode QR Apapun";
-"onboarding.scan.description" = "Arahkan kamera Anda ke kode QR manapun untuk langsung menganalisis kontennya terhadap potensi ancaman.";
-"onboarding.protect.title" = "Perlindungan Real-Time";
-"onboarding.protect.description" = "Mesin kami yang didukung AI menganalisis URL menggunakan 25+ heuristik keamanan dan algoritma pembelajaran mesin.";
-"onboarding.privacy.title" = "Privasi Utama";
-"onboarding.privacy.description" = "Semua analisis terjadi di perangkat menggunakan Kotlin Multiplatform. Data Anda tidak pernah meninggalkan ponsel Anda.";
-"onboarding.design.title" = "Desain iOS 17+ yang Indah";
-"onboarding.design.description" = "Nikmati antarmuka Liquid Glass yang menakjubkan dengan animasi halus dan estetika modern.";
+"onboarding.scan.title" = "Pindai kode QR apapun";
+"onboarding.scan.description" = "Arahkan kamera Anda ke kode QR untuk langsung menganalisis kontennya terhadap ancaman potensial.";
+"onboarding.protect.title" = "Perlindungan real-time";
+"onboarding.protect.description" = "Mesin AI kami menganalisis URL menggunakan 25+ heuristik keamanan dan algoritma machine learning.";
+"onboarding.privacy.title" = "Privasi utama";
+"onboarding.privacy.description" = "Semua analisis terjadi di perangkat menggunakan Kotlin Multiplatform. Data Anda tidak pernah meninggalkan ponsel.";
+"onboarding.design.title" = "Desain iOS 17+ yang indah";
+"onboarding.design.description" = "Rasakan antarmuka Liquid Glass yang memukau dengan animasi halus dan estetika modern.";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "Izin Kamera";
@@ -268,7 +268,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "Selesai";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Perlu Dimulai Ulang";
@@ -655,3 +655,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
