--- a/iosApp/MehrGuard/it.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/it.lproj/Localizable.strings
@@ -11,10 +11,10 @@
 "app.tagline" = "Rilevatore QRishing Kotlin Multiplatform";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Home";
+"tab.dashboard" = "Dashboard";
 "tab.scan" = "Scansiona";
 "tab.history" = "Cronologia";
-"tab.training" = "Formazione";
+"tab.training" = "Allenamento";
 "tab.settings" = "Impostazioni";
 
 // MARK: - Scanner View
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Avvisi di sicurezza";
 "settings.security_alerts_description" = "Ricevi notifiche sulle minacce alla sicurezza";
 "settings.notifications_denied_title" = "Notifiche disabilitate";
-"settings.notifications_denied_message" = "Per ricevere gli avvisi di sicurezza, abilita le notifiche per Mehr Guard nelle Impostazioni.";
+"settings.notifications_denied_message" = "Per ricevere avvisi, abilita le notifiche per Mehr Guard nelle Impostazioni.";
 "settings.open_settings" = "Apri Impostazioni";
 "settings.cancel" = "Annulla";
 
@@ -133,11 +133,11 @@
 
 // Onboarding Pages
 "onboarding.scan.title" = "Scansiona qualsiasi codice QR";
-"onboarding.scan.description" = "Punta la fotocamera verso qualsiasi codice QR per analizzare istantaneamente il suo contenuto per potenziali minacce.";
+"onboarding.scan.description" = "Punta la fotocamera verso un codice QR per analizzare istantaneamente il suo contenuto alla ricerca di minacce.";
 "onboarding.protect.title" = "Protezione in tempo reale";
-"onboarding.protect.description" = "Il nostro motore alimentato da AI analizza gli URL usando 25+ euristiche di sicurezza e algoritmi di machine learning.";
+"onboarding.protect.description" = "Il nostro motore IA analizza gli URL usando oltre 25 euristiche di sicurezza e algoritmi di machine learning.";
 "onboarding.privacy.title" = "Privacy prima di tutto";
-"onboarding.privacy.description" = "Tutta l'analisi avviene sul dispositivo usando Kotlin Multiplatform. I tuoi dati non lasciano mai il tuo telefono.";
+"onboarding.privacy.description" = "Tutte le analisi avvengono sul dispositivo usando Kotlin Multiplatform. I tuoi dati non lasciano mai il telefono.";
 "onboarding.design.title" = "Bellissimo design iOS 17+";
 "onboarding.design.description" = "Sperimenta la straordinaria interfaccia Liquid Glass con animazioni fluide ed estetica moderna.";
 
@@ -269,7 +269,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "Fatto";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Riavvio necessario";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
