--- a/iosApp/MehrGuard/ko.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/ko.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "app.tagline" = "Kotlin 멀티플랫폼 QRishing 탐지기";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "홈";
+"tab.dashboard" = "대시보드";
 "tab.scan" = "스캔";
 "tab.history" = "기록";
 "tab.training" = "훈련";
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "보안 알림";
 "settings.security_alerts_description" = "보안 위협에 대한 알림 받기";
 "settings.notifications_denied_title" = "알림 비활성화됨";
-"settings.notifications_denied_message" = "보안 알림을 받으려면 설정에서 Mehr Guard의 알림을 활성화하세요.";
+"settings.notifications_denied_message" = "알림을 받으려면 설정에서 Mehr Guard 알림을 활성화하세요.";
 "settings.open_settings" = "설정 열기";
 "settings.cancel" = "취소";
 
@@ -133,13 +133,13 @@
 
 // Onboarding Pages
 "onboarding.scan.title" = "모든 QR 코드 스캔";
-"onboarding.scan.description" = "카메라를 QR 코드에 맞추면 잠재적 위협에 대해 즉시 콘텐츠를 분석합니다.";
+"onboarding.scan.description" = "카메라를 QR 코드에 향하면 잠재적 위협을 즉시 분석합니다.";
 "onboarding.protect.title" = "실시간 보호";
-"onboarding.protect.description" = "AI 기반 엔진이 25개 이상의 보안 휴리스틱과 머신러닝 알고리즘을 사용하여 URL을 분석합니다.";
+"onboarding.protect.description" = "AI 엔진이 25가지 이상의 보안 휴리스틱과 머신러닝으로 URL을 분석합니다.";
 "onboarding.privacy.title" = "개인정보 우선";
-"onboarding.privacy.description" = "모든 분석은 Kotlin 멀티플랫폼을 사용하여 기기에서 이루어집니다. 데이터가 휴대폰을 떠나지 않습니다.";
+"onboarding.privacy.description" = "모든 분석은 Kotlin Multiplatform을 사용해 기기에서 수행됩니다. 데이터가 외부로 전송되지 않습니다.";
 "onboarding.design.title" = "아름다운 iOS 17+ 디자인";
-"onboarding.design.description" = "부드러운 애니메이션과 현대적인 미학을 갖춘 멋진 Liquid Glass 인터페이스를 경험하세요.";
+"onboarding.design.description" = "부드러운 애니메이션과 현대적 미학의 멋진 Liquid Glass 인터페이스를 경험하세요.";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "카메라 권한";
@@ -269,7 +269,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "완료";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "재시작 필요";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
