--- a/iosApp/MehrGuard/pt.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/pt.lproj/Localizable.strings
@@ -11,11 +11,11 @@
 "app.tagline" = "Detector de QRishing Kotlin Multiplatform";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Início";
+"tab.dashboard" = "Painel";
 "tab.scan" = "Escanear";
 "tab.history" = "Histórico";
 "tab.training" = "Treinamento";
-"tab.settings" = "Ajustes";
+"tab.settings" = "Configurações";
 
 // MARK: - Scanner View
 "scanner.title" = "Mehr Guard";
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Alertas de segurança";
 "settings.security_alerts_description" = "Receber notificações sobre ameaças de segurança";
 "settings.notifications_denied_title" = "Notificações desativadas";
-"settings.notifications_denied_message" = "Para receber alertas de segurança, habilite as notificações para Mehr Guard nos Ajustes.";
+"settings.notifications_denied_message" = "Para receber alertas, ative as notificações do Mehr Guard nos Ajustes.";
 "settings.open_settings" = "Abrir Ajustes";
 "settings.cancel" = "Cancelar";
 
@@ -132,13 +132,13 @@
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
-"onboarding.scan.title" = "Escaneie qualquer código QR";
-"onboarding.scan.description" = "Aponte sua câmera para qualquer código QR para analisar instantaneamente seu conteúdo em busca de ameaças potenciais.";
+"onboarding.scan.title" = "Escaneie qualquer QR Code";
+"onboarding.scan.description" = "Aponte sua câmera para um QR Code para analisar instantaneamente seu conteúdo em busca de ameaças.";
 "onboarding.protect.title" = "Proteção em tempo real";
-"onboarding.protect.description" = "Nosso motor alimentado por IA analisa URLs usando mais de 25 heurísticas de segurança e algoritmos de aprendizado de máquina.";
+"onboarding.protect.description" = "Nosso motor IA analisa URLs usando mais de 25 heurísticas de segurança e algoritmos de machine learning.";
 "onboarding.privacy.title" = "Privacidade em primeiro lugar";
-"onboarding.privacy.description" = "Toda a análise acontece no dispositivo usando Kotlin Multiplatform. Seus dados nunca saem do seu telefone.";
-"onboarding.design.title" = "Belo design iOS 17+";
+"onboarding.privacy.description" = "Toda análise acontece no dispositivo usando Kotlin Multiplatform. Seus dados nunca saem do seu celular.";
+"onboarding.design.title" = "Lindo design iOS 17+";
 "onboarding.design.description" = "Experimente a impressionante interface Liquid Glass com animações suaves e estética moderna.";
 
 // Camera Permission Alert
@@ -269,7 +269,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "Concluído";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Reinício necessário";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
