--- a/iosApp/MehrGuard/ru.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/ru.lproj/Localizable.strings
@@ -11,10 +11,10 @@
 "app.tagline" = "Kotlin Мультиплатформенный QRishing детектор";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Главная";
+"tab.dashboard" = "Панель";
 "tab.scan" = "Сканировать";
 "tab.history" = "История";
-"tab.training" = "Обучение";
+"tab.training" = "Тренировка";
 "tab.settings" = "Настройки";
 
 // MARK: - Scanner View
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Оповещения безопасности";
 "settings.security_alerts_description" = "Получать уведомления об угрозах";
 "settings.notifications_denied_title" = "Уведомления отключены";
-"settings.notifications_denied_message" = "Чтобы получать оповещения безопасности, включите уведомления для Mehr Guard в Настройках.";
+"settings.notifications_denied_message" = "Для получения уведомлений включите уведомления для Mehr Guard в Настройках.";
 "settings.open_settings" = "Открыть Настройки";
 "settings.cancel" = "Отмена";
 
@@ -133,13 +133,13 @@
 
 // Onboarding Pages
 "onboarding.scan.title" = "Сканируйте любой QR-код";
-"onboarding.scan.description" = "Наведите камеру на любой QR-код для мгновенного анализа его содержимого на потенциальные угрозы.";
+"onboarding.scan.description" = "Наведите камеру на QR-код для мгновенного анализа содержимого на наличие угроз.";
 "onboarding.protect.title" = "Защита в реальном времени";
 "onboarding.protect.description" = "Наш ИИ-движок анализирует URL с помощью 25+ эвристик безопасности и алгоритмов машинного обучения.";
 "onboarding.privacy.title" = "Конфиденциальность прежде всего";
-"onboarding.privacy.description" = "Весь анализ происходит на устройстве с помощью Kotlin Multiplatform. Ваши данные никогда не покидают телефон.";
+"onboarding.privacy.description" = "Весь анализ происходит на устройстве с использованием Kotlin Multiplatform. Ваши данные никогда не покидают телефон.";
 "onboarding.design.title" = "Красивый дизайн iOS 17+";
-"onboarding.design.description" = "Насладитесь потрясающим интерфейсом Liquid Glass с плавными анимациями и современной эстетикой.";
+"onboarding.design.description" = "Испытайте потрясающий интерфейс Liquid Glass с плавными анимациями и современной эстетикой.";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "Разрешение камеры";
@@ -269,7 +269,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "Готово";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Требуется перезапуск";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
