--- a/iosApp/MehrGuard/th.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/th.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "tab.dashboard" = "แดชบอร์ด";
 "tab.scan" = "สแกน";
 "tab.history" = "ประวัติ";
-"tab.training" = "การฝึกอบรม";
+"tab.training" = "ฝึกซ้อม";
 "tab.settings" = "การตั้งค่า";
 
 // MARK: - Scanner View
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "การแจ้งเตือนความปลอดภัย";
 "settings.security_alerts_description" = "รับการแจ้งเตือนเกี่ยวกับภัยคุกคามความปลอดภัย";
 "settings.notifications_denied_title" = "การแจ้งเตือนถูกปิด";
-"settings.notifications_denied_message" = "เพื่อรับการแจ้งเตือนความปลอดภัย กรุณาเปิดใช้งานการแจ้งเตือนสำหรับ Mehr Guard ในการตั้งค่า";
+"settings.notifications_denied_message" = "หากต้องการรับการแจ้งเตือน กรุณาเปิดการแจ้งเตือนสำหรับ Mehr Guard ในการตั้งค่า";
 "settings.open_settings" = "เปิดการตั้งค่า";
 "settings.cancel" = "ยกเลิก";
 
@@ -128,18 +128,18 @@
 // MARK: - Onboarding
 "onboarding.skip" = "ข้าม";
 "onboarding.continue" = "ดำเนินการต่อ";
-"onboarding.get_started" = "เริ่มต้นใช้งาน";
+"onboarding.get_started" = "เริ่มต้น";
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
-"onboarding.scan.title" = "สแกนโค้ด QR ใดก็ได้";
-"onboarding.scan.description" = "ชี้กล้องของคุณไปที่โค้ด QR ใดก็ได้เพื่อวิเคราะห์เนื้อหาทันทีสำหรับภัยคุกคามที่อาจเกิดขึ้น";
+"onboarding.scan.title" = "สแกน QR โค้ดใดก็ได้";
+"onboarding.scan.description" = "ชี้กล้องไปที่ QR โค้ดเพื่อวิเคราะห์เนื้อหาทันทีสำหรับภัยคุกคามที่อาจเกิดขึ้น";
 "onboarding.protect.title" = "การป้องกันแบบเรียลไทม์";
-"onboarding.protect.description" = "เอนจินที่ขับเคลื่อนด้วย AI ของเราวิเคราะห์ URL โดยใช้ฮิวริสติกความปลอดภัย 25+ รายการและอัลกอริทึมการเรียนรู้ของเครื่อง";
+"onboarding.protect.description" = "เอ็นจิ้น AI ของเราวิเคราะห์ URL โดยใช้ฮิวริสติกด้านความปลอดภัยกว่า 25 รายการและอัลกอริทึมการเรียนรู้ของเครื่อง";
 "onboarding.privacy.title" = "ความเป็นส่วนตัวมาก่อน";
 "onboarding.privacy.description" = "การวิเคราะห์ทั้งหมดเกิดขึ้นบนอุปกรณ์โดยใช้ Kotlin Multiplatform ข้อมูลของคุณไม่เคยออกจากโทรศัพท์";
-"onboarding.design.title" = "ดีไซน์ iOS 17+ ที่สวยงาม";
-"onboarding.design.description" = "สัมผัสประสบการณ์อินเทอร์เฟซ Liquid Glass ที่น่าทึ่งพร้อมแอนิเมชันที่ลื่นไหลและความสวยงามแบบทันสมัย";
+"onboarding.design.title" = "ดีไซน์ iOS 17+ สวยงาม";
+"onboarding.design.description" = "สัมผัสอินเทอร์เฟซ Liquid Glass ที่น่าทึ่งพร้อมแอนิเมชันที่ลื่นไหลและสุนทรียศาสตร์ทันสมัย";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "การอนุญาตกล้อง";
@@ -268,7 +268,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "เสร็จสิ้น";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "ต้องรีสตาร์ท";
@@ -655,3 +655,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
