--- a/iosApp/MehrGuard/tr.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/tr.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "app.tagline" = "Kotlin Multiplatform QR Kimlik Avı Dedektörü";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Kontrol Paneli";
+"tab.dashboard" = "Panel";
 "tab.scan" = "Tara";
 "tab.history" = "Geçmiş";
 "tab.training" = "Eğitim";
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Güvenlik uyarıları";
 "settings.security_alerts_description" = "Güvenlik tehditleri hakkında bildirim al";
 "settings.notifications_denied_title" = "Bildirimler Devre Dışı";
-"settings.notifications_denied_message" = "Güvenlik uyarıları almak için lütfen Ayarlar'dan Mehr Guard bildirimlerin etkinleştirin.";
+"settings.notifications_denied_message" = "Uyarı almak için Ayarlar'da Mehr Guard bildirimlerini etkinleştirin.";
 "settings.open_settings" = "Ayarları Aç";
 "settings.cancel" = "İptal";
 
@@ -127,19 +127,19 @@
 
 // MARK: - Onboarding
 "onboarding.skip" = "Atla";
-"onboarding.continue" = "Devam Et";
+"onboarding.continue" = "Devam";
 "onboarding.get_started" = "Başla";
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
-"onboarding.scan.title" = "Herhangi Bir QR Kodunu Tara";
-"onboarding.scan.description" = "Potansiyel tehditlere karşı içeriğini anında analiz etmek için kameranızı herhangi bir QR koduna doğrultun.";
-"onboarding.protect.title" = "Gerçek Zamanlı Koruma";
-"onboarding.protect.description" = "Yapay zeka destekli motorumuz, 25+ güvenlik sezgisel yöntemi ve makine öğrenimi algoritmaları kullanarak URL'leri analiz eder.";
-"onboarding.privacy.title" = "Önce Gizlilik";
-"onboarding.privacy.description" = "Tüm analizler Kotlin Multiplatform kullanılarak cihaz üzerinde gerçekleşir. Verileriniz asla telefonunuzdan çıkmaz.";
-"onboarding.design.title" = "Güzel iOS 17+ Tasarımı";
-"onboarding.design.description" = "Pürüzsüz animasyonlar ve modern estetikle çarpıcı Liquid Glass arayüzünü deneyimleyin.";
+"onboarding.scan.title" = "Herhangi bir QR Kodu tarayın";
+"onboarding.scan.description" = "Potansiyel tehditlere karşı içeriğini anında analiz etmek için kameranızı herhangi bir QR koduna yöneltin.";
+"onboarding.protect.title" = "Gerçek zamanlı koruma";
+"onboarding.protect.description" = "AI motorumuz 25+ güvenlik sezgisel ve makine öğrenimi algoritmaları kullanarak URL'leri analiz eder.";
+"onboarding.privacy.title" = "Gizlilik önce gelir";
+"onboarding.privacy.description" = "Tüm analizler Kotlin Multiplatform kullanılarak cihazda gerçekleşir. Verileriniz asla telefonunuzdan ayrılmaz.";
+"onboarding.design.title" = "Güzel iOS 17+ tasarımı";
+"onboarding.design.description" = "Akıcı animasyonlar ve modern estetikle çarpıcı Liquid Glass arayüzünü deneyimleyin.";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "Kamera İzni";
@@ -268,7 +268,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "Bitti";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Yeniden Başlatma Gerekli";
@@ -655,3 +655,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
