--- a/iosApp/MehrGuard/vi.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/vi.lproj/Localizable.strings
@@ -11,11 +11,11 @@
 "app.tagline" = "Trình Phát Hiện Lừa Đảo QR Kotlin Multiplatform";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "Bảng Điều Khiển";
+"tab.dashboard" = "Bảng điều khiển";
 "tab.scan" = "Quét";
-"tab.history" = "Lịch Sử";
-"tab.training" = "Huấn Luyện";
-"tab.settings" = "Cài Đặt";
+"tab.history" = "Lịch sử";
+"tab.training" = "Huấn luyện";
+"tab.settings" = "Cài đặt";
 
 // MARK: - Scanner View
 "scanner.title" = "Mehr Guard";
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "Cảnh báo bảo mật";
 "settings.security_alerts_description" = "Nhận thông báo về các mối đe dọa bảo mật";
 "settings.notifications_denied_title" = "Thông Báo Bị Tắt";
-"settings.notifications_denied_message" = "Để nhận cảnh báo bảo mật, vui lòng bật thông báo cho Mehr Guard trong Cài Đặt.";
+"settings.notifications_denied_message" = "Để nhận cảnh báo, bật thông báo cho Mehr Guard trong Cài đặt.";
 "settings.open_settings" = "Mở Cài Đặt";
 "settings.cancel" = "Hủy";
 
@@ -126,19 +126,19 @@
 "settings.engine" = "Engine";
 
 // MARK: - Onboarding
-"onboarding.skip" = "Bỏ Qua";
-"onboarding.continue" = "Tiếp Tục";
-"onboarding.get_started" = "Bắt Đầu";
+"onboarding.skip" = "Bỏ qua";
+"onboarding.continue" = "Tiếp tục";
+"onboarding.get_started" = "Bắt đầu";
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
-"onboarding.scan.title" = "Quét Bất Kỳ Mã QR Nào";
-"onboarding.scan.description" = "Hướng camera của bạn vào bất kỳ mã QR nào để phân tích ngay nội dung của nó đối với các mối đe dọa tiềm ẩn.";
-"onboarding.protect.title" = "Bảo Vệ Thời Gian Thực";
-"onboarding.protect.description" = "Engine hỗ trợ AI của chúng tôi phân tích URL bằng hơn 25 phương pháp heuristic bảo mật và thuật toán học máy.";
-"onboarding.privacy.title" = "Quyền Riêng Tư Trước Tiên";
+"onboarding.scan.title" = "Quét mọi mã QR";
+"onboarding.scan.description" = "Hướng camera vào mã QR để phân tích ngay lập tức nội dung của nó tìm các mối đe dọa tiềm ẩn.";
+"onboarding.protect.title" = "Bảo vệ thời gian thực";
+"onboarding.protect.description" = "Engine AI của chúng tôi phân tích URL sử dụng hơn 25 heuristics bảo mật và thuật toán machine learning.";
+"onboarding.privacy.title" = "Quyền riêng tư trước tiên";
 "onboarding.privacy.description" = "Tất cả phân tích diễn ra trên thiết bị sử dụng Kotlin Multiplatform. Dữ liệu của bạn không bao giờ rời khỏi điện thoại.";
-"onboarding.design.title" = "Thiết Kế iOS 17+ Đẹp Mắt";
+"onboarding.design.title" = "Thiết kế iOS 17+ đẹp";
 "onboarding.design.description" = "Trải nghiệm giao diện Liquid Glass tuyệt đẹp với hoạt ảnh mượt mà và thẩm mỹ hiện đại.";
 
 // Camera Permission Alert
@@ -268,7 +268,7 @@
 "settings.language_system" = "System Default";
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
-"common.done" = "Done";
+"common.done" = "Xong";
 
 // MARK: - Restart Required Screen
 "settings.restart_title" = "Cần khởi động lại";
@@ -655,3 +655,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
