--- a/iosApp/MehrGuard/zh-Hans.lproj/Localizable.strings
+++ b/iosApp/MehrGuard/zh-Hans.lproj/Localizable.strings
@@ -11,10 +11,10 @@
 "app.tagline" = "Kotlin 多平台二维码钓鱼检测器";
 
 // MARK: - Tab Bar
-"tab.dashboard" = "主页";
+"tab.dashboard" = "仪表板";
 "tab.scan" = "扫描";
 "tab.history" = "历史";
-"tab.training" = "培训";
+"tab.training" = "训练";
 "tab.settings" = "设置";
 
 // MARK: - Scanner View
@@ -97,7 +97,7 @@
 "settings.security_alerts" = "安全警报";
 "settings.security_alerts_description" = "接收安全威胁通知";
 "settings.notifications_denied_title" = "通知已禁用";
-"settings.notifications_denied_message" = "要接收安全警报，请在设置中为 Mehr Guard 启用通知。";
+"settings.notifications_denied_message" = "要接收警报，请在设置中启用 Mehr Guard 的通知。";
 "settings.open_settings" = "打开设置";
 "settings.cancel" = "取消";
 
@@ -128,18 +128,18 @@
 // MARK: - Onboarding
 "onboarding.skip" = "跳过";
 "onboarding.continue" = "继续";
-"onboarding.get_started" = "开始使用";
+"onboarding.get_started" = "开始";
 "onboarding.page_indicator" = "%d/%d";
 
 // Onboarding Pages
 "onboarding.scan.title" = "扫描任意二维码";
-"onboarding.scan.description" = "将相机对准任意二维码，即时分析其内容以检测潜在威胁。";
+"onboarding.scan.description" = "将相机对准任何二维码以即时分析其内容是否存在潜在威胁。";
 "onboarding.protect.title" = "实时保护";
-"onboarding.protect.description" = "我们的 AI 驱动引擎使用 25 多种安全启发式算法和机器学习算法分析链接。";
+"onboarding.protect.description" = "我们的AI引擎使用25+安全启发式和机器学习算法分析URL。";
 "onboarding.privacy.title" = "隐私优先";
-"onboarding.privacy.description" = "所有分析都在设备上使用 Kotlin 多平台进行。您的数据永远不会离开您的手机。";
-"onboarding.design.title" = "精美的 iOS 17+ 设计";
-"onboarding.design.description" = "体验令人惊叹的 Liquid Glass 界面，流畅的动画和现代美学。";
+"onboarding.privacy.description" = "所有分析都使用Kotlin Multiplatform在设备上进行。您的数据永远不会离开手机。";
+"onboarding.design.title" = "精美的iOS 17+设计";
+"onboarding.design.description" = "体验令人惊叹的Liquid Glass界面，流畅的动画和现代美学。";
 
 // Camera Permission Alert
 "onboarding.camera.title" = "相机权限";
@@ -656,3 +656,15 @@
 "export.action_share_desc" = "Open the iOS share sheet to send via Messages, Mail, AirDrop, or save to Files.";
 "export.json_description" = "Exports raw analysis data in JSON format. Perfect for integration with security tools, SIEMs, or for further automated processing.";
 "export.pdf_description" = "Exports a human-readable security report suitable for sharing with team members, management, or for your records. Includes verdict, risk factors, and recommendations.";
+
+/* Additional Strings */
+"common.settings" = "Settings";
+"component.risk_score_format" = "Risk Score: %d/100";
+"result.analysis_description" = "Review the URL breakdown below.";
+"result.analysis_mode" = "Analysis Complete";
+"result.caution_description" = "Some suspicious patterns detected. Exercise caution before proceeding.";
+"result.caution_mode" = "Caution Advised";
+"result.open_safe_message" = "This URL has been verified as safe. You can proceed with confidence.";
+"result.safe_description" = "This URL passed all security checks. Safe to proceed.";
+"result.safe_mode" = "Verified Safe";
+"scanner.camera_required_short" = "Enable camera in Settings to scan QR codes";
